# HenryCLI

./: .gitignore  EDITS.md  LICENSE  README.md  agents.md  calculator.py  index.html  install.sh  pyproject.toml
.qwen/: settings.json
config/: default.yaml
src/henrycli/: __init__.py  auto_tier.py  cli.py  downloader.py  lmstudio.py  model_manager.py  model_switcher.py  plugins.py  tui.py
src/henrycli/agents/: __init__.py  agentic.py  base.py  router.py  specialist.py
src/henrycli/context/: __init__.py  filestore.py  manager.py
src/henrycli/models/: __init__.py  config.py  pool.py
src/henrycli/tools/: __init__.py  filesystem.py
tests/: __init__.py  test_auto_tier.py  test_benchmarks.py  test_cli_commands.py  test_downloader.py  test_filestore.py  test_lmstudio.py  test_model_config.py  test_model_switcher.py  test_plugins.py  test_router_agent.py
